Video Sequencer doesen't render speakers' sounds. #65817

Closed
opened 2019-06-14 20:42:39 +02:00 by Piotr · 7 comments

System Information
Operating system: Windows 10 64 Bit
Graphics card: GTX 1080 8GB VRAM

Blender Version
Broken: 2.80, 8ac0fef4df, 2019-06-14,
Worked: 2.80, cc600de669, 2018-05-31

Short description of error
Blender 2.80 8ac0fef4df 2019-06-14 does not render speakers' sounds at all even though I have enabled sounds in the audio panel in the scene's properties.

0000-0024.mp4

Exact steps for others to reproduce the error

  • Create an animation, it can be a simple move of a cube from point A to point B.
  • Add speaker to the viewport and attach sound.
  • Render the animation as PNG pictures.
  • Open Video Sequencer
  • Add rendered PNG pictures as Image Sequence
  • Switch Output file format to FFmpeg Video and choose any settings for video and sounds
  • Render the animation

The result? The animation does not have sounds played by speakers.

Blend File:Test.blend

**System Information** Operating system: Windows 10 64 Bit Graphics card: GTX 1080 8GB VRAM **Blender Version** Broken: 2.80, 8ac0fef4dfd1, 2019-06-14, Worked: 2.80, cc600de6695a, 2018-05-31 **Short description of error** Blender 2.80 8ac0fef4dfd1 2019-06-14 does not render speakers' sounds at all even though I have enabled sounds in the audio panel in the scene's properties. [0000-0024.mp4](https://archive.blender.org/developer/F7103104/0000-0024.mp4) **Exact steps for others to reproduce the error** - Create an animation, it can be a simple move of a cube from point A to point B. - Add speaker to the viewport and attach sound. - Render the animation as PNG pictures. - Open Video Sequencer - Add rendered PNG pictures as Image Sequence - Switch Output file format to FFmpeg Video and choose any settings for video and sounds - Render the animation The result? The animation does not have sounds played by speakers. Blend File:[Test.blend](https://archive.blender.org/developer/F7103103/Test.blend)
Author

Added subscriber: @Lewiatan

Added subscriber: @Lewiatan

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Sergey Sharybin was assigned by Dalai Felinto 2019-06-14 21:29:39 +02:00

Probably similar issue as to #65814 (I haven't tried to reproduce this though).

Probably similar issue as to #65814 (I haven't tried to reproduce this though).

@dfelinto, this is a totally different issue.

@dfelinto, this is a totally different issue.

Developer note.

Part of the issue here is that speakers were not in the dependency graph in this configuration. The attached patch fixes this aspect.

This makes dependency graph and evaluation do the right thing judging by the logs. However, this isn't enough to get the sound in the final video. Could be that sequencer rendering and video output are using different sound handles or so.

partial_fix_T65817.patch

Developer note. Part of the issue here is that speakers were not in the dependency graph in this configuration. The attached patch fixes this aspect. This makes dependency graph and evaluation do the right thing judging by the logs. However, this isn't enough to get the sound in the final video. Could be that sequencer rendering and video output are using different sound handles or so. [partial_fix_T65817.patch](https://archive.blender.org/developer/F7103429/partial_fix_T65817.patch)

This issue was referenced by 7b8d4904d2

This issue was referenced by 7b8d4904d21e796f90c68fca797f051c2d536894

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65817
No description provided.