Fix T65817: Video Sequencer doesen't render speakers' sounds

Part of the issue was caused by missing speaker objects in the depsgraph
used for post-processing.

Remaining part was caused by missing scene sound update for this depsgraph.