source/blender/depsgraph/intern/depsgraph_build.cc
@@ -285,7 +285,7 @@ void DEG_graph_build_from_view_layer(Depsgraph *graph,
 void DEG_graph_build_for_render_pipeline(Depsgraph *graph,
                                          Main *bmain,
                                          Scene *scene,
-                                         ViewLayer * /*view_layer*/)
+                                         ViewLayer *view_layer)
 {
   double start_time = 0.0;
   if (G.debug & (G_DEBUG_DEPSGRAPH_BUILD | G_DEBUG_DEPSGRAPH_TIME)) {
@@ -299,13 +299,13 @@ void DEG_graph_build_for_render_pipeline(Depsgraph *graph,
   /* Generate all the nodes in the graph first */
   DEG::DepsgraphNodeBuilder node_builder(bmain, deg_graph, &builder_cache);
   node_builder.begin_build();
-  node_builder.build_scene_render(scene);
+  node_builder.build_scene_render(scene, view_layer);
   node_builder.end_build();
   /* Hook up relationships between operations - to determine evaluation
    * order. */
   DEG::DepsgraphRelationBuilder relation_builder(bmain, deg_graph, &builder_cache);
   relation_builder.begin_build();
-  relation_builder.build_scene_render(scene);
+  relation_builder.build_scene_render(scene, view_layer);
   relation_builder.build_copy_on_write_relations();
   /* Finalize building. */
   graph_build_finalize_common(deg_graph, bmain);
@@ -315,11 +315,8 @@ void DEG_graph_build_for_render_pipeline(Depsgraph *graph,
   }
 }
 
-void DEG_graph_build_for_compositor_preview(Depsgraph *graph,
-                                            Main *bmain,
-                                            Scene *scene,
-                                            struct ViewLayer * /*view_layer*/,
-                                            bNodeTree *nodetree)
+void DEG_graph_build_for_compositor_preview(
+    Depsgraph *graph, Main *bmain, Scene *scene, struct ViewLayer *view_layer, bNodeTree *nodetree)
 {
   double start_time = 0.0;
   if (G.debug & (G_DEBUG_DEPSGRAPH_BUILD | G_DEBUG_DEPSGRAPH_TIME)) {
@@ -333,14 +330,14 @@ void DEG_graph_build_for_compositor_preview(Depsgraph *graph,
   /* Generate all the nodes in the graph first */
   DEG::DepsgraphNodeBuilder node_builder(bmain, deg_graph, &builder_cache);
   node_builder.begin_build();
-  node_builder.build_scene_render(scene);
+  node_builder.build_scene_render(scene, view_layer);
   node_builder.build_nodetree(nodetree);
   node_builder.end_build();
   /* Hook up relationships between operations - to determine evaluation
    * order. */
   DEG::DepsgraphRelationBuilder relation_builder(bmain, deg_graph, &builder_cache);
   relation_builder.begin_build();
-  relation_builder.build_scene_render(scene);
+  relation_builder.build_scene_render(scene, view_layer);
   relation_builder.build_nodetree(nodetree);
   relation_builder.build_copy_on_write_relations();
   /* Finalize building. */
