source/blender/render/intern/source/pipeline.c
@@ -2071,10 +2071,8 @@ void RE_SetReports(Render *re, ReportList *reports)
 static void render_update_depsgraph(Render *re)
 {
   Scene *scene = re->scene;
-  /* TODO(sergey): This doesn't run any callbacks and doesn't do sound update. But we can not use
-   * BKE_scene_graph_update_for_newframe() because that one builds dependency graph for view layer
-   * and not for the render pipeline. */
   DEG_evaluate_on_framechange(re->main, re->pipeline_depsgraph, CFRA);
+  BKE_scene_update_sound(re->pipeline_depsgraph, re->main);
 }
 
 static void render_init_depsgraph(Render *re)
